# ChangeLog for app-editors/focuswriter
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/focuswriter/ChangeLog,v 1.18 2014/02/04 13:43:40 hasufell Exp $

*focuswriter-1.4.4 (04 Feb 2014)

  04 Feb 2014; Julian Ospald <hasufell@gentoo.org> +focuswriter-1.4.4.ebuild:
  version bump wrt #500198

  20 May 2013; Agostino Sarubbo <ago@gentoo.org> focuswriter-1.4.2.ebuild:
  Stable for x86, wrt bug #470314

  19 May 2013; Agostino Sarubbo <ago@gentoo.org> focuswriter-1.4.2.ebuild:
  Stable for amd64, wrt bug #470314

*focuswriter-1.4.2 (05 Apr 2013)

  05 Apr 2013; Ben de Groot <yngwin@gentoo.org> +focuswriter-1.4.2.ebuild,
  -focuswriter-1.4.0.ebuild:
  version bump, drop old, add message about optional sound support (bug #442414)

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> focuswriter-1.4.0.ebuild,
  focuswriter-1.4.1.ebuild:
  Move Qt dependencies to the new category

  13 Jan 2013; Agostino Sarubbo <ago@gentoo.org> focuswriter-1.4.1.ebuild:
  Stable for x86, wrt bug #450552

  06 Jan 2013; Sergey Popov <pinkbyte@gentoo.org> focuswriter-1.4.1.ebuild:
  Stable on amd64, wrt bug #450552

*focuswriter-1.4.1 (05 Dec 2012)

  05 Dec 2012; Michael Palimaka <kensington@gentoo.org>
  +focuswriter-1.4.1.ebuild, -focuswriter-1.3.5.2.ebuild:
  Version bump, remove old.

  20 Nov 2012; Agostino Sarubbo <ago@gentoo.org> focuswriter-1.4.0.ebuild:
  Stable for x86, wrt bug #442164

  14 Nov 2012; <ago@gentoo.org> focuswriter-1.4.0.ebuild:
  Stable for amd64, wrt bug #442164

*focuswriter-1.4.0 (06 Oct 2012)

  06 Oct 2012; Ben de Groot <yngwin@gentoo.org> +focuswriter-1.4.0.ebuild,
  -focuswriter-1.3.90.ebuild:
  Version bump. Add l10n handling. Remove beta.

*focuswriter-1.3.90 (02 Sep 2012)

  02 Sep 2012; Davide Pesavento <pesa@gentoo.org> +focuswriter-1.3.90.ebuild,
  -focuswriter-1.3.80.ebuild:
  Bump to 1.4 beta 2.

*focuswriter-1.3.80 (14 Aug 2012)
