@@ -1,22 +1,29 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST focuswriter-1.4.1-src.tar.bz2 3138335 SHA256 ad256fcd85b67c4953c822c617fb93e739cfdc758c6efb2f8902bf8723f94b21 SHA512 67b38151aae7480ae3f3c084599cfcdeffc9cb33ec1b9ca69f9d1829f392c1cb23dab5e0957d8aa8e94e1683671165d8db2eb71ab7602f6f0b6502b56fd81bec WHIRLPOOL e6d71d1bd4d214a55e925241042f7b3898a79acc352808de4ace059b84755f32966290cf3cbec8121aa7a7d1f975525e8b6f9c9a9a97e29045d621b1d86d33f6
 DIST focuswriter-1.4.2-src.tar.bz2 3149160 SHA256 f41ccf226cb5e4181162d37b2a4b5598be202bb184e2f7c26412dc371c9ef328 SHA512 4b6f503fb6624eea12372fbee169e21df3e728420ffede73bc5895ba451c80910f7f68ebba67a914fe380634d868e7d5a5d196218e255d15155ba397805a63d6 WHIRLPOOL 705694be03e514c2f432d014dbafc1a8a55d0025bdfbfd697dfe416dc2beee3ddd337f8ea50eea8737af59015a6d15e64d55f53afa80c62b5f640fefc3e7b2e9
 DIST focuswriter-1.4.4-src.tar.bz2 3361062 SHA256 b574d6b76609078e36c38dd3b632cdfe1360bfb3a71221c3afc89b1c01d7670f SHA512 2206022f4de9878629e6bb1c8c64870b73c604496d116c8a692181dedf05b9a975d845f64997e2ca3d762c49a52cfbce56167b9ec512fee64a12eb93a513df00 WHIRLPOOL 8727d83dd24830496b149a912fd351687e4fcdc63353448fa29220e909b9b78856e4d21263ddb4d7b856dc72d9aa7a1106633590597f9fed7ed0d3d934edd953
-EBUILD focuswriter-1.4.1.ebuild 1060 SHA256 681b6aafe8067c524a237f33488b8816112cb7064d63fb92c33e0ff416cee13b SHA512 b69791fad35a5ac7bb3b78980b930ffb41fe2ec5e0954f5749799521fb0e14f5e7bb342dc2c8724ad74446d4bd4f58aac3a80f8d8cceff4f542db967b8814aba WHIRLPOOL 6d2404fe8ed1bf61984e0d31df52f7881c3ff360cb7502d4e145c9b88e2968a0dd87e94da9578c167eb0db6bf936b405b57f87a0ae004798ec25ad5836f92e51
+DIST focuswriter-1.5.2-src.tar.bz2 5200637 SHA256 b1c09aafcf9a28f5a02a0c5365b6585cee3a2f027739593b80687b1efb32a7c3 SHA512 d121ceac035b447443267fe1fe422d53ce5f66f06b7ee8b37fe0e5a3ac2e599d85c2a8f753c3507f1b04c72928f310fb67310bb5b8707c06cbe095afe875925a WHIRLPOOL bdd658b60c2cd87a06cc3e57919bcd65fd68d99141a731464918dec146ae1af643f05f63c81d450d14ab70700740e31501393d18ba872d0e679c682edc23a034
 EBUILD focuswriter-1.4.2.ebuild 1229 SHA256 baf33abc5f00fdb6eda4b3d90c9bbda3bfda6948588621bd6e7b30aa9609266a SHA512 09005ae22cfe6c0228677cb8825e5edc571fbbc71c5f577eb74dc0d6d11ab471ac0f504929456413ec8ea08d68e786dd056b24414d13402aa9d03c8f9765803e WHIRLPOOL ee342d8208ed828553a94f9d6e7893ab233815d70e31aba71658b46a5ed4919f59591f7265dc3e72a5b3edfdc7394475a44aa0eda063a606f5170a3d05b47bdc
 EBUILD focuswriter-1.4.4.ebuild 1488 SHA256 a79c4cca54c7d4e1195c477ffcb5d1735659f445a713b05aaa589c42183f43ca SHA512 8d7f29630a9b173b03b40aeca35ad498ea25b58255d2e23d19481b15e355195ef722e023da19a106e61fc7bfe8530723f71220652f5e336ed400d4ce53f7204c WHIRLPOOL eab609e81a70fe17a95f0962b97d0adc62441356322305b3be7b55e7bca2115ab83c19830e4ad22e7fd0241f298c2a2f17a926c668b5a02c84e16b1ae70154e6
-MISC ChangeLog 3923 SHA256 cd0b22846bac8c390b7ab74b05f16c00e7fc930c2bf9db328a72a57d7fe376d0 SHA512 874fe2304c64d745b38b11809bcefed1cf4205ebe1ac9104caa70cdf61924b1eda08ea8e38a5d83f52ab4fdec9ba3c06edd84d60afc1fd3306dd0d0cf055941e WHIRLPOOL 5f63939dd3b33a11b8eb547486e8edbba126754291e5bd49c4400ac3185875ecd5e40568b45886928a379fceadc1773a2eb0aea83225e2a97594b52f369c0335
-MISC metadata.xml 157 SHA256 a2ffc792d4df94c3f8088e329c4bf74804540c2797f3e24ab0030acbdfd4b535 SHA512 9f259ee8df00db96dd396c6c886624c53728c3e26f28071cc1f9a286798271cdfac3485a081d308c93ff3067cb6568f9ea55ca164334abeee776491307244213 WHIRLPOOL bcb16b3d9ab21125e5581aed1225d2b399015d76bc7c6f9deae53e2e38fffdc47e0b5aae9bd632e85db242a37b4de5aa05d6f97c087cad085df9390530a0a597
+EBUILD focuswriter-1.5.2.ebuild 1507 SHA256 6323b682310381d528af45762930e545a4c739adc6c21b33c85803afb8bb665f SHA512 2d297f112d83775380ee60902cf9db5892ac91fac74f6685f7d5ac3e6ebbeda4d5594fa70e38a6b5cfe898f9e9bf7bc00f2b9cb273215a7e948d62968c3b220a WHIRLPOOL 982da768877e5b213e3aad29f7d61ad7843091f04fc6e99115689d320f780e0a684179afc341738e7ba18a909a142d861bfaabcf72d1fc080523e1e7e7d89d9d
+MISC ChangeLog 4116 SHA256 711838b9690abc9f7efd0ab226da1ac0f359bb611e7c7add12dd7b3d776eb768 SHA512 531492d8e2c64af2da264939a0fc3b3bd24ff96d0085ec5a04824461d55d419b4a98ccf23b3f4b317fa59435323c85156a67493d0a054c641a3bba8fa9d76694 WHIRLPOOL 4ef2f7c8dcd4d2cc4d78aafad25fb79500f727c7b5b30ec072627290381e0955f800ac10a6978528e08027a2f74844d1774f3da6d31211e60f9e8e5b13729ab3
+MISC metadata.xml 156 SHA256 2bc85ad7339ae0191c26e435f2da777058779a7ebf73d14658a6ea7bfcec01b2 SHA512 d9991797d488000e1b306b9d97982fb862fbb44d72d4f7560e3ab12ba2022a7abdd3a71bd971a18f562edefc6948e5d5db0972425f7ebe7208696678f1c17b45 WHIRLPOOL aa1bf1df6e2bb4c13c1eae59bfa12dcfe4b81794562c52538f037c75d706f415fed1acc302501cd5f3017b13c910cadbbb9b823a0625cd3b64b29b860259492e
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2.0
 
-iQEcBAEBCAAGBQJS8O6QAAoJEFpvPKfnPDWzLwYH/RXKb7Ar31j1t3J790xGQHfF
-GzU0wCxoksJ8jXzNFBmHQwvF/KBLra/pwgh+PnmhGmPzwXzPYREJ8FIOe7q5KC6T
-6ZyCrkoRUokhRCHy5HK+QKA3VYDjIsFwNK73Cyx7QtRqSK6DcEfm86rjw3Tv4Oi3
-ykkTc4750lkHNFG75wIjZKQLZ67GY6y9FMdKLy+XmPlySyBgzkhnaJPp2Sicn9XE
-DInpFqrPbq64R6UeI/tJ2f4NceJjC01bNkfhRIqYwpQldfNK2yiYaokeSAEpxq/C
-/DHE993r2qGOG+d/DlvNc5n226+8R+mxR9OOCmq3sUCNwPcQInTqJq+tnnQNxP4=
-=OsU6
+iQJiBAEBCABMBQJT2h9TRRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
+MTY5NkQ3RDM3NkRBN0U5QjZGMTUwMDZCMUYzOERDQTQ1QTFFQwAKCRAGsfONykWh
+7HpWEAC5g6gK15D38ZKLNnS8WfKYunPpTts3UUzaXGa4P01MofcPuad3YHdNnSiJ
+pPpnoXQxledmuH4OrhRtcSr5QHgusWAaQD0KXHuvR6D+qYAYpeBmrKwHEd+h2VTn
+zZxhz+4xSxI/Pi2Qw3aOmZ3/k+QmGtu6x0/ZxY8YQUwHhvE3UEDa99MlWNAXRTGU
+TcVY5SzelKgYdT9CMRKFcbNzpr8NQbRicK92Iwh61l6CISZrkJnFBb9ZlOTzYjnt
+hwP8khEDq5nR/SsVXW9Q2HYRs4LJYiDCN/2kmiMfDq63dljhi4lyIpi/NSFhzgQ5
+Xkb/0T7adHc7dR4c4Vr6DTDsE8WceEwK0X6d3muHn9rU7Ust8uGpBrTvNIoK/8yz
+4S38Cbyi8CV9q++v2yPsp1TapuIUwHC6cRKhKY2WEHMJKlPTgbpqF4C9hC/290RT
+S0fVAsB0ZhuLcO+tVEMHjfWdSe1pBI76i6b8F03kmTMd7Z5Z3OLwcld1ICcBQexR
+YYW48IoUr+1ddUjkIN8rMkWeUCHSAu4GsObatMsRNobS0LxJcYAQgDbQ4ZiSyTDK
+491D40moZUE4+r8POrG1R2I6RPmDK2YG9bcFj1nQHpNiF6SdFEiOdznMq6cV2LoR
+dgZ7GkgiMmoIOOIEttkvQ4Mu2HxsNHgkaqomzWRB1kPhQKQ4Ww==
+=ZLDN
 -----END PGP SIGNATURE-----
