@@ -19,15 +19,19 @@ DIST font-arial-iso-8859-1.tar.bz2 234242 SHA256 9730f481764f367c9089d0166fb6ccf
 DIST font-arial-iso-8859-2.tar.bz2 222208 SHA256 71debfc960007c2f6242dfc91e8b1c005b30a99e129aeb00ab8c03f4371b41c1 SHA512 5671e628303fd816f64a51ad10e2f4dd9c3dc1b34c379a2ecf489b83931db7af668aaa4e00e96a00cacd63ed98daeae6b6a4d5925edfb06fc98d3a923f70257d WHIRLPOOL 08178087b4ea1dfb2250f4673785e31dd876b06af51c51b2bddc172b23e6e33cbc1b2c6b710a317e42dc05486974b26ed0ad3ca50a185567aa77d49bd1e72aee
 DIST mplayer-1.2_pre20130729.tar.xz 5358436 SHA256 9928cd6d0d765eb38f2824c501b94e5b6e0a2ec6e39a0c788654c5508c9eb9ab SHA512 e76ae7a1aeca9e853edf5403f3e3ae60dace980076a12160c501e18d019184af08256829f8e657b9fdbf549126bf518cf5dbe2860eda906e6fcd3ccc44a5f5a5 WHIRLPOOL b4007e4a00fd8b0b2d75a6d375f3b334b3251ea8dd677a5c1d562e4997fbbee81981bbbde9a88a61dc83bfc2d3e5dac6f93e7ff882088ba8b0c3df7c2cd9a6bd
 EBUILD mplayer-1.1.1-r1.ebuild 18277 SHA256 9c3f60a9f4ab017547f99cb2d3124d30de1928696c669d6133e0af70e0beca55 SHA512 e5b60bef7740831b45eac20ee1e8d2c0186d991ccf76f3a9df6726cea6cda06727fdc7ca0c4f35564662ad2b11510248c025426b8474ba0f642db1b8dbac794e WHIRLPOOL d97cdde7cd10ec5f2fb34fd67bebc5d8d0d3975e006cbd468bf8ac88064261f625db0a32cc06e2f3f6ff9b60c5dfa9de60e4a6c217fc8fa21da1b8cd93f7d539
-EBUILD mplayer-1.2_pre20130729.ebuild 17331 SHA256 ca079e8386793b06892ddffca095744070de6433c923eeef1cfe5d48de213c83 SHA512 45f914098969cf5e0e3d3e1ba0f2320c5953dcb2b566c022172d1f6ea60fe833a252905e0c9d64deea0c428cf05a72bdce04236882309f5138c731a968ec87bf WHIRLPOOL 3518e4ec55af09f96c3316ad34ffa4a7623dec6e9d9c6345f224b37e8cbf9ee7c8b510a0938d9fbcd662c7d8675426f90ec6ee3f6d59001d759f1c55f6777cee
+EBUILD mplayer-1.2_pre20130729.ebuild 17335 SHA256 c1e8427ba87500993671584e25dcdf58e42c0a3d06b6e11ca40f9204ae59d9db SHA512 fe53247055f728ebdc274a283ce80e4dceaf33b107d092e568c82356223d26a42440c50ec417eff346423b1edbefe8508dcc81e03e66f4392e0a8732f21d0357 WHIRLPOOL be740b043221152c938e4e62e95e6edcd80f798f30ff1555c590025b285c90cf78409d806ec393b1a49b1571c934b2097dd6ef491bf8ea8767cc5474d6906847
 EBUILD mplayer-9999.ebuild 17253 SHA256 9b6e486479191ed39a2795acbd631086bab240d4feb3392d6188c9d484bcc54a SHA512 0c44e61252f2f3a278e93d9b6d9ba16eb808d7380b1d6620f67a758be6867f6ebb2e8d871013182640040097b30dbc05b70fb1e1acd64a262b6939247b7c4b19 WHIRLPOOL 1cba0f5abeafd1374aab1654871b50c51db6434ac84e222fb011f6424efda7ead82c316bfa3a98903cf1cce1e4ea85b961ec756850e92eb7caf30b6526a52afa
-MISC ChangeLog 52606 SHA256 3fb045a4b791f9ddce4c2f289519bb732b47a3ce8a06b0ad344217ee2049c551 SHA512 060d980f47d531f3fbae91dc4795f644b7c65825a4aec576414ddfd184e32374c7ab354e4b3954d1b1b4d719fbb21420f494211c7a53edf2d00560ae9bf15e3f WHIRLPOOL 51fe2f146f83c4aa70ceda3d34d75c065b3bf7262b7dcb4b2a064baf9c2d886e69b7fa46d6056db171a10f242061761baff95b3cc9d2d453057e218a503cb299
+MISC ChangeLog 52732 SHA256 a71df8befc1ee27d3225d2e78d6ef651972a028fd15fca6abddad546f8d58dac SHA512 059d011916cfdb7fea8651ee462266251443cacb4f119a7d50f4e0d8c4667fd01ee104537ec1fd4a527b3dc349daa857a4ddd83997d23df80050c46fff553182 WHIRLPOOL 202f1e2c5058bef6c46172b9ec4dddbaf1e19a29f9b02f1908beacc787406aed62f79275c86d1149a17a27f0078405f28e8022de35e9824a18239dd2fc19f994
 MISC ChangeLog-2008 107064 SHA256 d9949e0e21fd6fd00f1417201455ee399240ef1010dcf56611ac0fc1f6f9505b SHA512 622543b379b4c44f5845566b4e697bd92dd3e864e2f01a1b0f303c8ae5c7fb5de24839f6503765d51b4a3bfa777d175a7e410383e62ef2bbacf3e87cdc28c705 WHIRLPOOL e731af47505ffa646c92386dfb14acaffc2bb14ab4da74520c0b4dbc15ca5c20aacadbb53c4b91ba8d126a75bf7d2fb61877eeda354064e20c48cf4137bf6a74
 MISC metadata.xml 2825 SHA256 1cfceed0df46a651a5236072ab550073f468a0f9c3aef51c943f1536cc898bac SHA512 7fcf38fdc415346b4576f2e078cd8014905be1269febbc5e574e5f6c44620e239506a63b530d2b8f1b271edf3e6a2b6791dd5fd45ec5d3d1518b0d46c3dde710 WHIRLPOOL 15aa6e751c8b80a033b61b66e3ba0e3d118efe433c620126323c2a87edf6834a60762af0fee1bbe19c406fe3c9b699c9c2b7b2837b9d3b50f2132ba07479e9ab
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPaBqsACgkQVWmRsqeSphOuWQCePF1Im5jLU6EQytNsjLnrhr7u
-yUsAn22BW2KFcKoKrCzmAbUKH0sGb8Td
-=281m
+iQEcBAEBCAAGBQJT2hzmAAoJEEdUh39IaPFNhcUH/31vG9DtsD53aBSQdBt4lSbu
+td2o+mHGAZ6r+97O1mCrWBYnK1dv2+N9qLTAKBu+mDcTL0OLqS3YuwXXmuirmMYW
++IppKlqzcxgeFeOIGBzMv0xsDk4CATNletE8BJzU8YAbAYc01XQMjoOPUVja8WpI
+SnpDceiM9zzkh1jVmFoT7FmUjL0ogJupQh1MU4vx59yzGNEeYrX+upUhNAKS7Nk2
+0MmpjEx0UOMMDLMSzrJcOKKiAfwwL2jTyklTZHTB0qqt0IFrEuTheRwNIc7iOxcO
+d3lKTS2GVlXcvF9/CjTqx3P/wfpcXCsCoXM+cA9Cg+DXRacHNf0v4Y5oQjndaGs=
+=WC1K
 -----END PGP SIGNATURE-----
