@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile configure install prepare unpack
-DEPEND=app-text/enchant dev-libs/libzip media-libs/sdl-mixer[wav] sys-libs/zlib dev-qt/qtcore:4 dev-qt/qtgui:4 virtual/pkgconfig
-DESCRIPTION=A fullscreen and distraction-free word processor
-EAPI=5
-HOMEPAGE=http://gottcode.org/focuswriter/
-IUSE=debug linguas_ca linguas_cs linguas_da linguas_de linguas_el linguas_en linguas_es linguas_es_MX linguas_fi linguas_fr linguas_hu linguas_it linguas_ja linguas_nl linguas_pl linguas_pt_BR linguas_pt linguas_ru linguas_sk linguas_sv linguas_uk linguas_zh_CN
-KEYWORDS=amd64 x86
-LICENSE=GPL-3
-RDEPEND=app-text/enchant dev-libs/libzip media-libs/sdl-mixer[wav] sys-libs/zlib dev-qt/qtcore:4 dev-qt/qtgui:4
-SLOT=0
-SRC_URI=http://gottcode.org/focuswriter/focuswriter-1.4.1-src.tar.bz2
-_eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	06133990e861be0fe60c2b428fd025d9	l10n	33bde4fb0cfd3a21a277b66bfd837e19	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	qmake-utils	40136c5fe0002a0d3937e869ae4ee0e2	qt4-r2	b40473dafd07d7c5fe4aef1c1b902f39	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=0d4a587493c0cb499b5fd7fa708e59c2
