@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install postinst postrm preinst prepare unpack
+DEPEND=app-text/hunspell dev-qt/qtcore:4 dev-qt/qtgui:4 sys-libs/zlib virtual/pkgconfig >=sys-apps/sed-4
+DESCRIPTION=A fullscreen and distraction-free word processor
+EAPI=5
+HOMEPAGE=http://gottcode.org/focuswriter/
+IUSE=debug linguas_ar linguas_ca linguas_cs linguas_da linguas_de linguas_el linguas_en linguas_en_GB linguas_es_MX linguas_es linguas_fi linguas_fr linguas_he linguas_hu linguas_hy linguas_id linguas_it linguas_ja linguas_ko linguas_nl linguas_pl linguas_pt_BR linguas_pt linguas_ro linguas_ru linguas_sk linguas_sr linguas_sv linguas_tr linguas_uk linguas_vi linguas_zh_CN linguas_zh_TW
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-3
+RDEPEND=app-text/hunspell dev-qt/qtcore:4 dev-qt/qtgui:4 sys-libs/zlib
+SLOT=0
+SRC_URI=http://gottcode.org/focuswriter/focuswriter-1.5.2-src.tar.bz2
+_eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	06133990e861be0fe60c2b428fd025d9	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome2-utils	f658eba3cc594a21cf6eef4af47daa90	l10n	33bde4fb0cfd3a21a277b66bfd837e19	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	qmake-utils	40136c5fe0002a0d3937e869ae4ee0e2	qt4-r2	b40473dafd07d7c5fe4aef1c1b902f39	readme.gentoo	106edea5533517715013de909a333abd	toolchain-funcs	0f1760274637a138b99bb649202ea402
+_md5_=b4c004aee97e3bb204930f3f6b4ec123
