@@ -4,11 +4,11 @@ DESCRIPTION=Media Player for Linux
 EAPI=5
 HOMEPAGE=http://www.mplayerhq.hu/
 IUSE=3dnow 3dnowext a52 aalib +alsa altivec aqua bidi bindist bl bluray bs2b cddb +cdio cdparanoia cpudetection debug dga directfb doc dts dv dvb +dvd +dvdnav +enca +encode faac faad fbcon ftp gif ggi gsm +iconv ipv6 jack joystick jpeg jpeg2k kernel_linux ladspa +libass libcaca libmpeg2 lirc live lzo mad md5sum +mmx mmxext mng mp3 nas +network nut openal opengl +osdmenu oss png pnm pulseaudio pvr radio rar rtc rtmp samba selinux +shm sdl speex sse sse2 ssse3 tga theora tremor +truetype toolame twolame +unicode v4l vdpau vidix vorbis +X x264 xanim xinerama +xscreensaver +xv xvid xvmc zoran video_cards_s3virge video_cards_mga video_cards_tdfx
-KEYWORDS=~alpha ~amd64 arm hppa ~ppc ~ppc64 ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x86-solaris
+KEYWORDS=~alpha amd64 arm hppa ~ppc ~ppc64 ~sparc x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x86-solaris
 LICENSE=GPL-2
 RDEPEND=sys-libs/ncurses app-arch/bzip2 sys-libs/zlib || ( >=media-video/ffmpeg-1.2.1:0= >=media-video/libav-9.8:= ) a52? ( media-libs/a52dec ) aalib? ( media-libs/aalib ) alsa? ( media-libs/alsa-lib ) bidi? ( dev-libs/fribidi ) bluray? ( >=media-libs/libbluray-0.2.1 ) bs2b? ( media-libs/libbs2b ) cdio? ( dev-libs/libcdio ) cdparanoia? ( !cdio? ( media-sound/cdparanoia ) ) dga? ( x11-libs/libXxf86dga ) directfb? ( dev-libs/DirectFB ) dts? ( media-libs/libdca ) dv? ( media-libs/libdv ) dvb? ( virtual/linuxtv-dvb-headers ) dvd? ( >=media-libs/libdvdread-4.1.3 ) dvdnav? ( >=media-libs/libdvdnav-4.1.3 ) encode? ( !twolame? ( toolame? ( media-sound/toolame ) ) twolame? ( media-sound/twolame ) faac? ( media-libs/faac ) mp3? ( media-sound/lame ) x264? ( >=media-libs/x264-0.0.20100423:= ) xvid? ( media-libs/xvid ) ) enca? ( app-i18n/enca ) faad? ( media-libs/faad2 ) ggi? ( media-libs/libggi media-libs/libggiwmh ) gif? ( media-libs/giflib ) gsm? ( media-sound/gsm ) iconv? ( virtual/libiconv ) jack? ( media-sound/jack-audio-connection-kit ) jpeg? ( virtual/jpeg:0 ) jpeg2k? ( media-libs/openjpeg:0 ) ladspa? ( media-libs/ladspa-sdk ) libass? ( >=media-libs/libass-0.9.10:=[enca?] ) libcaca? ( media-libs/libcaca ) libmpeg2? ( media-libs/libmpeg2 ) lirc? ( app-misc/lirc ) live? ( media-plugins/live ) lzo? ( >=dev-libs/lzo-2 ) mad? ( media-libs/libmad ) mng? ( media-libs/libmng:= ) mp3? ( media-sound/mpg123 ) nas? ( media-libs/nas ) nut? ( >=media-libs/libnut-661 ) openal? ( media-libs/openal ) opengl? ( virtual/opengl ) png? ( media-libs/libpng ) pnm? ( media-libs/netpbm ) pulseaudio? ( media-sound/pulseaudio ) rar? ( || ( app-arch/unrar app-arch/rar ) ) rtmp? ( media-video/rtmpdump ) samba? ( net-fs/samba ) selinux? ( sec-policy/selinux-mplayer ) sdl? ( media-libs/libsdl ) speex? ( media-libs/speex ) theora? ( media-libs/libtheora[encode?] ) tremor? ( media-libs/tremor ) truetype? ( virtual/ttf-fonts media-libs/fontconfig >=media-libs/freetype-2.2.1:2 ) vdpau? ( x11-libs/libvdpau ) vorbis? ( !tremor? ( media-libs/libvorbis ) ) X? ( x11-libs/libXext x11-libs/libXxf86vm ) xanim? ( media-video/xanim ) xinerama? ( x11-libs/libXinerama ) xscreensaver? ( x11-libs/libXScrnSaver ) xv? ( x11-libs/libXv ) xvmc? ( x11-libs/libXvMC )
 REQUIRED_USE=bindist? ( !faac ) dga? ( X ) dvdnav? ( dvd ) enca? ( iconv ) ggi? ( X ) libass? ( truetype ) opengl? ( X ) osdmenu? ( X ) truetype? ( iconv ) vdpau? ( X ) vidix? ( X ) xinerama? ( X ) xscreensaver? ( X ) xv? ( X ) xvmc? ( xv )
 SLOT=0
 SRC_URI=mirror://gentoo/mplayer-1.2_pre20130729.tar.xz !truetype? ( mirror://mplayer/releases/fonts/font-arial-iso-8859-1.tar.bz2 mirror://mplayer/releases/fonts/font-arial-iso-8859-2.tar.bz2 mirror://mplayer/releases/fonts/font-arial-cp1250.tar.bz2 )
 _eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	06133990e861be0fe60c2b428fd025d9	flag-o-matic	9836bc51856bcaffac53c9cd4b59a8be	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=769970928ef8214cc2c548274b180cfd
+_md5_=3a0de1a43a0699b991ef449bf41e9db0
