@@ -1,6 +1,10 @@
 # ChangeLog for media-video/mplayer
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/mplayer/ChangeLog,v 1.922 2014/07/31 09:04:42 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/mplayer/ChangeLog,v 1.923 2014/07/31 10:39:37 ssuominen Exp $
+
+  31 Jul 2014; Samuli Suominen <ssuominen@gentoo.org>
+  mplayer-1.2_pre20130729.ebuild:
+  amd64/x86 stable wrt #517692
 
   31 Jul 2014; Jeroen Roovers <jer@gentoo.org> mplayer-1.2_pre20130729.ebuild:
   Stable for HPPA (bug #517692).
